--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
   <a class="footer-link" href="https://twitter.com/">Twitter</a>
-  <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+  <a class="footer-link" href="https://tauheedissa.github.io/cv/">Website</a>
   <p>© 2018 Name Surname.</p>
 </div>
 
